--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,12 +5,13 @@ html
         meta(http-equiv="Cache-Control" content="no-cache")
         meta(http-equiv="referrer" content="no-referrer")
         meta(http-equiv="viewport" content="width=device-width,initial-scale=1,user-scalable=no")
-        title Hello World!
+        title VRCX
         link(rel="dns-prefetch" href="https://fonts.gstatic.com")
+        link(rel="preconnect" href="https://api.vrchat.cloud")
         link(rel="preconnect" href="https://d348imysud55la.cloudfront.net")
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Noto+Sans+KR&display=swap")
     body
+        div(style="width:100%;height:30px;background:#ccc;-webkit-app-region:drag;-webkit-user-select: none;")
         h1 Hello World!
-        | We are using node #[script document.write(process.versions.node)],
-        | Chrome #[script document.write(process.versions.chrome)],
-        | and Electron #[script document.write(process.versions.electron)].
+        script(src="manifest.js")
+        script(src="app.js")
