--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,6 +12,6 @@ html
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Noto+Sans+KR&display=swap")
     body
         div(style="width:100%;height:30px;background:#ccc;-webkit-app-region:drag;-webkit-user-select: none;")
-        h1 Hello World!
+        app#app
         script(src="manifest.js")
         script(src="app.js")
