--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,5 +13,6 @@ html
     body
         div(style="width:100%;height:30px;background:#ccc;-webkit-app-region:drag;-webkit-user-select: none;")
         app#app
-        script(src="manifest.js")
+        script global = {};
+        //- script(src="manifest.js")
         script(src="app.js")
