--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,7 +12,7 @@ html
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Noto+Sans+KR&display=swap")
     body
         div(style="width:100%;height:30px;background:#ccc;-webkit-app-region:drag;-webkit-user-select: none;")
-        app#app
+        div#app
         script global = {};
         //- script(src="manifest.js")
         script(src="app.js")
