--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,6 +10,7 @@ html
         link(rel="preconnect" href="https://api.vrchat.cloud")
         link(rel="preconnect" href="https://d348imysud55la.cloudfront.net")
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Noto+Sans+KR&display=swap")
+        link(rel="stylesheet" href="app.css")
     body
         div(style="width:100%;height:30px;background:#ccc;-webkit-app-region:drag;-webkit-user-select: none;")
         div#app
