--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,8 +14,7 @@ html
         link(rel="stylesheet" href="vendor/element-plus/lib/theme-chalk/index.css")
         link(rel="stylesheet" href="app.css")
     body
-        div(style="width:100%;height:30px;background:#ccc;-webkit-app-region:drag;-webkit-user-select: none;")
-        div#app
+        #app
         script global = {};
         //- script(src="manifest.js")
         script(src="app.js")
