--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -88,7 +88,8 @@ button,
 input,
 select,
 textarea {
-    font-family: 'Noto Sans JP', 'Noto Sans KR', 'Apple SD Gothic Neo', 'Helvetica Neue', 'Helvetica',
+    // 'Noto Sans JP', 'Noto Sans KR',
+    font-family: 'Apple SD Gothic Neo', 'Helvetica Neue', 'Helvetica',
         'NanumBarunGothic', 'Meiryo UI', 'Malgun Gothic', 'Segoe UI', 'Arial', sans-serif;
     text-rendering: optimizeLegibility;
 }
